config-root/namespaces/jx-staging/react-spring/react-spring-react-spring-deploy.yaml
# Source: react-spring/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-spring-react-spring
  labels:
    draft: draft-app
    chart: "react-spring-0.0.53"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'react-spring'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: react-spring-react-spring
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: react-spring-react-spring
    spec:
      serviceAccountName: react-spring-react-spring
      containers:
      - name: react-spring
        image: "10.97.57.112/imckify/react-spring:0.0.53"
        imagePullPolicy: IfNotPresent
        envFrom: null
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 400m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
      - name: "tekton-container-registry-auth"
