config-root/namespaces/jx-staging/react-spring/react-spring-svc.yaml
# Source: react-spring/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-spring
  labels:
    chart: "react-spring-0.0.47"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'react-spring'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: react-spring-react-spring
